--- a/themes/pagedjs/layouts/partials/menu.html
+++ b/themes/pagedjs/layouts/partials/menu.html
@@ -1,5 +1,5 @@
 <aside class="menu">
-    <a href="{{ .Site.BaseURL }}" class="menu-logos">
+    <a class="menu-logos">
     {{ partial "paged-logo.html" }}
     {{ partial "baseline" . }}
     </a>
