--- a/themes/pagedjs/assets/css/base/menu.css
+++ b/themes/pagedjs/assets/css/base/menu.css
@@ -14,6 +14,8 @@
 }
 
 .menu {
+  transition: left 2s;
+
   svg {
     path {
       fill: var(--color-primary);
@@ -30,17 +32,23 @@
 }
 
 button.menuToggle {
-  padding: 0;
-  margin: 0;
-  max-width: 50%;
-  background: transparent;
-  border: 0;
-  box-shadow: none;
-
+    position: fixed;
+    top: 2em;  
+    z-index: 99;
+    border-radius: 0;
+    border-bottom-right-radius: 30%;
+    height: 160px;
+    width: 160px;
+    display: flex;
+    border: 0;
+    box-shadow: 0;
+    background: var(--color-background);
   svg {
     path {
       fill: var(--color-primary);
     }
+    /* width: 60%; */
+    /* margin: 0 auto; */
   }
 }
 
