--- a/themes/pagedjs/layouts/documentation/single.html
+++ b/themes/pagedjs/layouts/documentation/single.html
@@ -1,39 +1,36 @@
 {{ define "main" }}
 <div class="toc">
-
   <div class="title">CONTENTS</div>
-
   <h3>{{ .Title }}</h3>
-
-  {{ .TableOfContents }}
-
-
-  <aside>
-    {{ with .NextInSection }}
-    <p><span class="next">next section → </span>
-    <a class="next" href="{{.Permalink}}">{{.Title}}</a>
-  </p>
-  {{ end }}
-
-  {{ with .PrevInSection }}
-    <a class="previous" href="{{.Permalink}}">{{.Title}}</a>
-    {{ end }}
-  
-  </aside>
-  </div> 
+</div>
 <main class="documentation">
   {{ partial "cropmarks.html" }}
-
   <article>
     {{ partial "breadcrumb.html" . }}
     <header>
-        <h1 id="title">{{ .Title }}</h1>
+      <h1 id="title">{{ .Title }}</h1>
       {{ if .Params.intro  }}<p class="intro">{{ .Params.intro | markdownify }}</p>{{end}}
-   
-          </header>
-
+      <div class="toc">
+      <h2>Contents</h2>
+      {{ .TableOfContents }}
+    </div>
+    </header>
     {{ .Content }}
+    <aside class="paginator {{ if and .NextInSection .PrevInSection }} both{{ end }}">
+      {{ with .NextInSection }}
+        <a class="previous" href="{{.Permalink}}">{{.Title}}</a>
+      {{ end }}
+      {{ if .NextInSection }}
+        {{ with .PrevInSection }}
+          <a class="next" href="{{.Permalink}}">{{.Title}}</a>
+        {{ end }}
+        {{ else }}
+          {{ with .PrevInSection }}
+            <a class="next alone" href="{{.Permalink}}">{{.Title}}</a>
+          {{ end }}
+        {{ end }}
+        
+    </aside>
   </article>
 </main>
 {{ end }}
-
