--- a/themes/pagedjs/assets/css/base/toc.css
+++ b/themes/pagedjs/assets/css/base/toc.css
@@ -1,3 +1,9 @@
+.toc {
+  h2.toc-title {
+    margin-bottom: 0;
+  }
+}
+
 #TableOfContents {
 
     font-size: 0.9em;
@@ -11,11 +17,14 @@
   }
   ul {
     border-left: 1px solid black;
+    margin-left: 3px;
+    margin-top: 0;
   }
   li {
     list-style-type: none;
     max-width: 100%;
     position: relative;
+    margin-left: 2ch;
 
     a {
       background: white;
