--- a/themes/pagedjs/layouts/documentation/single.html
+++ b/themes/pagedjs/layouts/documentation/single.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
-<div class="toc">
+{{/*  <div class="toc">
   <div class="title">CONTENTS</div>
   <h3>{{ .Title }}</h3>
-</div>
+</div>  */}}
 <main class="documentation">
   {{ partial "cropmarks.html" }}
   <article>
@@ -11,7 +11,7 @@
       <h1 id="title">{{ .Title }}</h1>
       {{ if .Params.intro  }}<p class="intro">{{ .Params.intro | markdownify }}</p>{{end}}
       <div class="toc">
-      <h2>Contents</h2>
+      <h2 class="toc-title">Table of Contents</h2>
       {{ .TableOfContents }}
     </div>
     </header>
