--- a/themes/pagedjs/assets/css/base/layout.css
+++ b/themes/pagedjs/assets/css/base/layout.css
@@ -65,12 +65,12 @@ main {
 
   header {
     padding-bottom: 1.5em;
-    margin-top: -4em;
+    /* margin-top: -4em;
     padding-top: 4em;
     margin-left: -4em;
     margin-right: -4em;
     padding-left: 4em;
-    padding-right: 4em;
+    padding-right: 4em; */
   }
 }
 
@@ -147,6 +147,11 @@ main article .menu {
     main {
       margin: 0 auto;
       margin-bottom: 2em;
+      padding: 0;
+      margin-top: 3em;
+      article {
+        padding: 0;
+      }
     }
 
     footer {
