--- a/themes/pagedjs/assets/css/base/type.css
+++ b/themes/pagedjs/assets/css/base/type.css
@@ -68,8 +68,14 @@ article {
       --color-link: var(--color-accent);
       color: var(--color-accent);
     }
-  }
 
+    
+  }
+  blockquote {
+    padding-left: 1em;
+    margin-left: 0;
+    border-left: 0.5ch solid lightgrey;
+  }
   /* list */
 
   ol {
@@ -151,7 +157,7 @@ pre {
   padding: 0em 0.5em;
 
   font-weight: 400;
-  /* font-size: .85em; */
+  font-size: .9em;
   padding: 0.2em 0.5em;
   border: 1px solid lightgrey;
   white-space: pre-wrap;
@@ -167,7 +173,16 @@ code {
   line-height: 1.2em;
 }
 
+code {
+  background: #eed;
+  margin: 0 0.3ch;
+  line-height: 1;
+}
 
+pre code {
+  padding: 0;
+  background: transparent;
+}
 
 article h2 :not(pre) code {
   font-weight: 600;
