--- a/themes/pagedjs/assets/css/page/journal.css
+++ b/themes/pagedjs/assets/css/page/journal.css
@@ -1,4 +1,6 @@
 .article-list {
+  font-family: var(--font-sans);
+
   grid-column-start: start;
   display: flex;
   flex-direction: row;
@@ -13,7 +15,6 @@
     position: relative;
     margin-right: 3%;
     margin-bottom: 3%;
-    background: url(https://images.unsplash.com/photo-1512331455279-c8ae8178f586?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1489&q=80);
     background: var(--color-paper);
     background-size: cover;
     max-width: 30%;
