--- a/themes/pagedjs/layouts/_default/index.html
+++ b/themes/pagedjs/layouts/_default/index.html
@@ -1,8 +1,8 @@
-{{ define "headScripts"  }}
-{{ $js := resources.Get "js/glfx.js" }}
-<script src="{{ $js.Permalink }}"></script>
-{{ partial "js-halftone.html" }}
-{{ end }}
+{{/*  {{ define "headScripts"  }}  */}}
+{{/*  {{ $js := resources.Get "js/glfx.js" }}  */}}
+{{/*  <script src="{{ $js.Permalink }}"></script>  */}}
+{{/*  {{ partial "js-halftone.html" }}
+{{ end }}  */}}
 {{ define "main" }}
 <main>
     {{ partial "cropmarks.html" }}
