add meta viewport

--- a/themes/pagedjs/layouts/_default/baseof.html
+++ b/themes/pagedjs/layouts/_default/baseof.html
@@ -3,6 +3,8 @@
 
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="The home of paged.js, the library to turn HTML into PDF">
+    <meta name="viewport" content="width=device-width, initial-scale=1">  
     <title>{{ block "title" . }}
       {{ .Site.Title }}
       {{ end }}</title>
