--- a/themes/pagedjs/layouts/_default/index.html
+++ b/themes/pagedjs/layouts/_default/index.html
@@ -1,13 +1,26 @@
 {{ define "main" }}
 <main>
-    {{ partial "cropmarks.html" }}
+    {{ partial "cropmarks.html" . }}
     <article>
-       {{ if .Params.cover }} <img class="print-machine" src="{{.Params.cover}}" /> {{end}}
-        <div class="text">
-        {{ .Content }}
-    </div>
+        {{ partial "running-head" . }}
+
+        <div class="contents">
+            {{ if .Params.cover }} <img class="print-machine" src="{{.Params.cover}}" /> {{end}}
+            <div class="right">
+                {{ .Content }}
+            </div>
+        </div>
     </article>
 </main>
+{{/*  <main>
+    {{ partial "cropmarks.html" }}
+<article>
+    <div class="text">
+        {{ .Content }}
+    </div>
+</article>
+{{ partial "footer.html" . }}
+</main> */}}
 {{ end }}
 {{ define "footer"  }}
 {{ end }}
