--- a/themes/pagedjs/layouts/_default/single.html
+++ b/themes/pagedjs/layouts/_default/single.html
@@ -1,35 +1,41 @@
 {{ define "main" }}
-
 <main>
   {{ partial "cropmarks.html" }}
   <article>
-    {{/*  {{ partial "breadcrumb.html" . }}  */}}
-    <header>
-      <div class="meta">
-      <span class="date">{{ dateFormat "2/1/2006" .Date  }}</span>
-    {{ partial "tag-coma.html" . }}
-  </div>
-      <h1 id="title">{{ .Title }}</h1>
-      {{ if .Params.intro  }}<p class="intro">{{ .Params.intro | markdownify }}</p>{{end}}
-    </header>
-    
+  
+    {{ partial "running-head" . }}
 
+    {{/*  {{ partial "breadcrumb.html" . }}  */}}
+   
+    <header>
+      <p class="meta">
+        written by <span class="author">{{ .Params.author }}</span> on 
+        <span class="date">{{ dateFormat "January 2, 2006" .Date  }}</span>
+      </p>
+      <h1 id="title">{{ .Title }}</h1>
+      {{ if .Params.intro  }}<p class="intro">{{ .Params.intro | markdownify }} <br/><span class="tags">      {{ partial "tag-coma.html" . }}</span>      </p>{{end}}
+      <div class="tags">
+      </div>
+    </header>
     {{ .Content }}
     <aside class="paginator {{ if and .NextInSection .PrevInSection }} both{{ end }}">
       {{ with .NextInSection }}
-        <a class="previous" href="{{.Permalink}}">{{.Title}}</a>
+      <a class="previous" href="{{.Permalink}}">{{.Title}}</a>
       {{ end }}
       {{ if .NextInSection }}
-        {{ with .PrevInSection }}
-          <a class="next" href="{{.Permalink}}">{{.Title}}</a>
-        {{ end }}
-        {{ else }}
-          {{ with .PrevInSection }}
-            <a class="next alone" href="{{.Permalink}}">{{.Title}}</a>
-          {{ end }}
-        {{ end }}
-        
+      {{ with .PrevInSection }}
+      <a class="next" href="{{.Permalink}}">{{.Title}}</a>
+      {{ end }}
+      {{ else }}
+      {{ with .PrevInSection }}
+      <a class="next alone" href="{{.Permalink}}">{{.Title}}</a>
+      {{ end }}
+      {{ end }}
     </aside>
+    {{ partial "footer.html" . }}
   </article>
+
 </main>
+{{/*  {{ partial "menu.html" . }}  */}}
+
 {{ end }}
