--- a/themes/pagedjs/assets/css/base/fonts.css
+++ b/themes/pagedjs/assets/css/base/fonts.css
@@ -76,3 +76,17 @@
   src:url("../fonts/VictorMono-Regular.woff2") format("woff2"),url("../fonts/VictorMono-Regular.woff") format("woff"),url("../fonts/VictorMono-Regular.otf") format("opentype");
   font-style:normal;font-weight:400;
 }
+
+
+@font-face {
+  font-family:"Fanwood Text";
+  src:url("../fonts/FanwoodText-Regular.woff2") format("woff2"),url("../fonts/FanwoodText-Regular.woff") format("woff"),url("../fonts/FanwoodText-Regular.otf") format("opentype");
+  font-style:normal;font-weight:400;
+}
+      
+@font-face {
+  font-family:"Fanwood Text";
+  src:url("../fonts/FanwoodText-Italic.woff2") format("woff2"),url("../fonts/FanwoodText-Italic.woff") format("woff"),url("../fonts/FanwoodText-Italic.otf") format("opentype");
+  font-style:italic;font-weight:400;
+}
+      
