--- a/themes/pagedjs/assets/css/base/footer.css
+++ b/themes/pagedjs/assets/css/base/footer.css
@@ -1,11 +1,25 @@
 footer {
-  margin: 0 auto;
-  margin-top: 2em;
-  margin-right: 4em;
-  font-size: 0.9em;  
-  grid-column: start;
+  /* --tint: calc(360 - 220); 
+  --light: 20%;
+  --saturation: 50%; */
+  /* --color-primary: hsl(var(--tint), var(--light), var(--saturation)); */
+
+  /* --color-light: hsl(var(--tint), 80%, 80%); */
+
+  --color-accent: var(--color-primary);
+  margin: 0;
+  margin: 7em -3em -5em;
+  padding: 2em 3em 4em;
+  background: var(--color-light);
+  color: var(--color-primary);
+  /* margin-top: 2em; */
+  /* margin-right: 4em; */
+  font-size: 0.8em;
+  grid-column: left/end;
   font-family: var(--font-sans);
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   &.show {
     left: 10%;
@@ -18,26 +32,23 @@ footer {
 
   a {
     color: var(--color-primary);
-    margin-left: .6em;
+    background: transparent;
+    margin-top: 2em;
   }
 
-
-
   svg {
-    transform: rotate(-2deg);
     /* max-width: 300px; */
-    max-height: 120px;
+    max-height: 100px;
+    display: block;
     path {
       fill: var(--color-primary);
-      ;
     }
 
-    &:hover  {
+    &:hover {
       /* background: rgba(200, 120, 84, 0.2); */
       path {
         fill: var(--color-accent);
       }
-      
     }
   }
 
