--- a/themes/pagedjs/assets/css/base/type.css
+++ b/themes/pagedjs/assets/css/base/type.css
@@ -11,7 +11,7 @@ body {
 
 /* article */
 article {
-  font-size: 18px;
+  font-size: 20px;
   line-height: 1.6em;
 
   .meta {
@@ -50,10 +50,10 @@ article {
     max-width: 60ch;
   }
 
-  li { 
+  li {
     max-width: calc(60ch - 10ch);
     margin-left: 5ch;
-  } 
+  }
 
   a {
     text-decoration: none;
@@ -68,9 +68,8 @@ article {
       --color-link: var(--color-accent);
       color: var(--color-accent);
     }
-
-    
   }
+
   blockquote {
     padding-left: 1em;
     margin-left: 0;
@@ -87,7 +86,7 @@ article {
     padding: 0;
 
     & li::before {
-      content: "»";
+      content: " - ";
       display: block;
       position: absolute;
       margin-left: -3ch;
@@ -147,62 +146,69 @@ article {
     font-size: 1em;
   }
 
-/* code */
+  /* code */
 
 
-.highlight {
-  margin: 1em 0 2em 0;
-}
-pre {
-  padding: 0em 0.5em;
+  .highlight {
+    margin: 2em 0 3em 0;
 
-  font-weight: 400;
-  font-size: .9em;
-  padding: 0.2em 0.5em;
-  border: 1px solid lightgrey;
-  white-space: pre-wrap;
-  margin: 0;
-  /* background: hsl(0, 2%, 90%); */
-  /* overflow: auto; */
-}
-
-code {
-  /* font-family: var(--font-mono); */
-  font-size: .85em;
-  font-family: var(--font-mono);
-  line-height: 1.2em;
-}
-
-code {
-  background: #eed;
-  margin: 0 0.3ch;
-  line-height: 1;
-}
-
-pre code {
-  padding: 0;
-  background: transparent;
-}
-
-article h2 :not(pre) code {
-  font-weight: 600;
-  font-size: .8em;
-}
-
-/* table */
-table {
-  border: 10px solid (--color-primary);
-  border-collapse: collapse;
-  font-family: var(--font-sans);
-
-  tr {
-    td,
-    th {
-      padding: 0.3em 1em 0.5em;
-      border: 1px solid var(--color-primary);
+     + .highlight {
+      margin-top: -2em;
     }
   }
-}
+
+  pre {
+    padding: 0em 0.5em;
+    font-weight: 400;
+    font-size: .85em;
+    line-height: 1.35;
+    padding: 0.2em 0.5em;
+    border: 1px solid lightgrey;
+    white-space: pre-wrap;
+    margin: 0;
+    /* background: hsl(0, 2%, 90%); */
+    /* overflow: auto; */
+    & + pre {
+    }
+  }
+
+  code {
+    /* font-family: var(--font-mono); */
+    font-size: .85em;
+    font-family: var(--font-mono);
+    line-height: 1.2em;
+  }
+
+  code {
+    background: #eed;
+    margin: 0 0.3ch;
+    line-height: 1;
+  }
+
+  pre code {
+    padding: 0;
+    background: transparent;
+  }
+
+  article h2 :not(pre) code {
+    font-weight: 600;
+    font-size: .8em;
+  }
+
+  /* table */
+  table {
+    border: 10px solid (--color-primary);
+    border-collapse: collapse;
+    font-family: var(--font-sans);
+
+    tr {
+      td,
+      th {
+        padding: 0.3em 1em 0.5em;
+        border: 1px solid var(--color-primary);
+      }
+    }
+  }
 
   /* figure */
   figure {
@@ -214,28 +220,28 @@ table {
   }
 
 
-/* definition terms */
-.dt {
-  display: inline;
-  border-bottom: 1px solid grey;
-  cursor: help;
-  position: relative;
+  /* definition terms */
+  .dt {
+    display: inline;
+    border-bottom: 1px solid grey;
+    cursor: help;
+    position: relative;
 
-  &:hover .dd {
-    display: block;
+    &:hover .dd {
+      display: block;
+    }
   }
-}
 
-.dd {
-  position: absolute;
-  background: var(--color-primary);
-  color: white;
-  font-family: var(--font-sans-serif);
-  top: 2em;
-  left: 0px;
-  width: 15em;
-  padding: 0.5em 1em;
-  display: none;
-}
+  .dd {
+    position: absolute;
+    background: var(--color-primary);
+    color: white;
+    font-family: var(--font-sans-serif);
+    top: 2em;
+    left: 0px;
+    width: 15em;
+    padding: 0.5em 1em;
+    display: none;
+  }
 }
 
