--- a/themes/pagedjs/assets/css/base/variables.css
+++ b/themes/pagedjs/assets/css/base/variables.css
@@ -1,13 +1,15 @@
 :root {
-  --tint: 200;
-  --light: 30%;
+  --tint: 300;
+  --light: 20%;
   --saturation: 50%;
   /* --color-background: hsl(0, 0%, 90%); */
-  --color-background: hsl(0, 0%, 95%);
+  --color-background: hsl(0, 0%, 100%);
   --color-lightest-grey: rgb(245, 245, 245);
   --color-primary: hsl(var(--tint), var(--light), var(--saturation));
-  --shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.12), 0 8px 8px rgba(0, 0, 0, 0.12), 0 16px 16px rgba(0, 0, 0, 0.12);
-  --shadow-main: var(--shadow);
+  --shadow-paper: 0 1px 1px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.12), 0 8px 8px rgba(0, 0, 0, 0.12), 0 16px 16px rgba(0, 0, 0, 0.12);
+  --shadow-main: var(--shadow-paper);
+  --shadow-paper: none;
+
   --shadow-main: none;
   --color-body: hsl(var(--tint), 20%, 20%);
   --color-link: var(--color-primary);
@@ -15,7 +17,8 @@
   --color-accent: var(--color-primary);
 
   /* --font-serif: "Minipax Variable", serif; */
-  --font-serif: "Fanwood Text", serif;
+  /* --font-serif: "Fanwood Text", serif; */
+  --font-serif: "Linden Hill", serif;
 
   /* --font-serif: "Inria Serif",  serif; */
   --font-sans: "Jost", sans-serif;
