--- a/themes/pagedjs/assets/css/page/index.css
+++ b/themes/pagedjs/assets/css/page/index.css
@@ -1,64 +1,39 @@
 .homepage {
-  .menu {
-    transform: none;
-    padding-bottom: 2em;
+  /* height: auto/; */
+  /* min-height: 95vh; */
+}
 
-    &::before {
-      background: white;
-    }
-  }
+.homepage main {
+  /* margin: auto; */
 
-  main {
-    margin-top: 5em;
-  }
-
-  article {
-    padding: 2em;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .text {
-    margin-left: 4ch;
-    max-width: 30ch;
-  }
-
-  .print-machine {
-    background: var(--color-paper);
-    height: 50vh;
-
-    img {
-      mix-blend-mode: multiply;
-      height: 100%;
-    }
-  }
-
-  .menu svg path {
-    fill: var(--color-primary, black);
-  }
-
-  .baseline {
-    color: var(--color-primary);
-  }
+  
 }
 
 
 
-@media screen and (max-width: 1200px) {
-  .homepage article {
-    flex-direction: column;
-  }
+.homepage article .contents {
+  grid-template-columns: [left] 50% [start];
+  grid-column: left/end;
+    display: grid;
+    margin-top: 4em;
+    grid-gap: 8ch;
+}
 
-  .homepage {
-    img {
-      object-fit: contain;
-    }
 
-    .text {
-      margin-left: 0;
-      max-width: 100%;
-    }
-  }
+
+
+.print-machine {
+grid-column: left;
+width: 100%;
+max-width: 500px;
+margin: 0 auto;
+/* margin-top: 3em; */
+img {
+  object-fit: contain;
+}
+}
+
+.right {
+  grid-column: start;
+  align-self: center;
 }
