--- a/themes/pagedjs/assets/css/page/posts.css
+++ b/themes/pagedjs/assets/css/page/posts.css
@@ -1,7 +1,8 @@
-.cookbook {
-  --tint: calc(360 - 220); 
+.posts {
+  --tint: calc(360/40);
   --light: 20%;
   --saturation: 50%;
   --color-primary: hsl(var(--tint), var(--light), var(--saturation));
   --color-accent: var(--color-primary);
 }
+
