--- a/themes/pagedjs/assets/css/page/single.css
+++ b/themes/pagedjs/assets/css/page/single.css
@@ -1,28 +1,62 @@
 article {
   header {
+    display: flex;
+    flex-direction: column;
     margin-bottom: 6em;
-    font-weight: 700;
+    position: relative;
+    z-index: 2;
+    text-shadow: 1px 1px var(--color-paper), -1px 1px var(--color-paper), -1px -1px var(--color-paper), 1px -1px var(--color-paper), 2px 2px var(--color-paper), -2px 2px var(--color-paper), -2px -2px var(--color-paper), 2px -2px var(--color-paper),
+    3px 3px var(--color-paper), -3px 3px var(--color-paper), -3px -3px var(--color-paper), 3px -3px var(--color-paper),
+    4px 4px var(--color-paper), -4px 4px var(--color-paper), -4px -4px var(--color-paper), 4px -4px var(--color-paper);
+    /* font-weight: 700; */
+    &::before {
+      content: " ";
+      transform: rotate(45deg);
+      border: 4px solid #eee;
+      z-index: -1;
+      width: 10em;
+      height: 10em;
+      display: block;
+      position: absolute;
+
+    }
 
     #title {
       margin-top: 0.3em;
       margin-bottom: 0;
-      font-weight: 900;
+      font-weight: 400;
+      font-style: italic;
+      color: var(--color-primary);
+      font-size: 6em;
+      font-family: var(--font-serif);
+      /* text-shadow: 1px 1px white, -1px 1px white, -1px -1px white, 1px -1px white, 2px 2px white, -2px 2px white, -2px -2px white, 2px -2px white; */
+
+  
     }
 
     .intro {
       font-family: var(--font-sans);
       font-size: 1.3em;
       max-width: 40ch;
+      margin-top: 2em;
+      color: var(--color-primary);
+      align-self: flex-end;
     }
-    p, ul, ol, h2, h4, h5,h6  {
-        margin-left: 0;
+
+    p,
+    ul,
+    ol,
+    h2,
+    h4,
+    h5,
+    h6 {
+      margin-left: 0;
     }
+
     h2 {
-        font-size: 1.5em;
+      font-size: 1.5em;
     }
-
   }
-
 }
 
 
@@ -72,69 +106,105 @@ article .note {
   }
 }
 
-
-
 article {
-    display: grid;
-    grid-template-columns: [left] 20% [main] 80% [end];
-    #breadcrumbs {
-        grid-column: left/end;
-    }
-    header {
-        grid-column: left/end;
-    }
-    figure {
-        grid-column: left/end;
-    }
-    p, ul, ol , h1, h2, h3, h4, h5, h6 , blockquote {
-        grid-column: main/end;
-    }
-    pre,  table, .highlight, .talkyard-comments {
-        grid-column: left/end
-    }
-     .signature {
-         grid-column: main/end;
-         font-family: var(--font-sans);
-         margin-top: 2em;
-         font-size: 0.8em;
-         max-width: 60%;
-         /* margin: 5em 0 auto auto; */
-         line-height: 1.6em;
-         .name {
-             border-bottom: 1px solid var(--color-primary);
-         }
-     }
+  display: grid;
+  grid-template-columns: [left] 20% [main] 60%  20%[end];
 
-     .signature img {
-         float: left;
-         display: block;
-         width: 73px;
-         margin-left: -90px;
-                  height: auto;
-         margin-right: 1em;
-        border-radius: 50%;
-        /* box-shadow: 0 0 0 5px var(--color-primary); */
-     }
+  .top {
+    grid-column: left/end;
+  }
 
+  #breadcrumbs {
+    grid-column: left/end;
+  }
 
-     .meta {
-         font-family: var(--font-sans);
-         border-bottom: 1px solid grey;
-         a {
-             font-style: normal;
-             margin-left: 2ch;
-             font-weight: 400;
-             background: transparent;
-         }
-     }
-     .date {
-         grid-column: left;
-         font-family: var(--font-sans);
-         font-size: 0.8em;
-         padding-top: 2px;
-     }
+  header {
+    grid-column: left/end;
+    margin-top: 10em;
+  }
 
-     
+  figure {
+    grid-column: left/end;
+  }
+
+  p,
+  ul,
+  ol,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  blockquote {
+    grid-column: main/main;
+  }
+
+  pre,
+  table,
+  .highlight,
+  .talkyard-comments {
+    grid-column: left/end;
+  }
+
+  .signature {
+    max-width: 50ch;
+    grid-column: main/end;
+    font-family: var(--font-sans);
+    margin-top: 2em;
+    font-size: 0.8em;
+    /* max-width: 60%; */
+    /* margin: 5em 0 auto auto; */
+    line-height: 1.6em;
+    color: var(--color-primary);
+
+    .name {
+      border-bottom: 2px dotted var(--color-primary);
+      margin-left: -3em;
+      padding-left: 3em;
+      width: max-content;
+    }
+  }
+
+  .signature img {
+    border: 2px solid var(--color-primary);
+    float: left;
+    display: block;
+    width: 73px;
+    margin-left: -90px;
+    height: auto;
+    margin-right: 1em;
+    border-radius: 50%;
+    /* box-shadow: 0 0 0 5px var(--color-primary); */
+  }
+
+  .meta {
+    /* grid-column: left; */
+    font-size: 0.8em;
+    font-family: var(--font-sans);
+    font-weight: 400;
+    /* border-bottom: 1px solid grey; */
+    a {
+      font-style: normal;
+      margin-left: 2ch;
+      font-weight: 400;
+      background: transparent;
+    }
+  }
+}
+
+.tags {
+  margin-top: 1em;
+  font-size: 0.8em;
+}
+
+a.tag {
+  font-family: var(--font-sans);
+  margin-right: 2ch;
+  text-decoration: underline;
+  font-style: normal;
+  font-weight: 400;
+  margin-top: 1em;
 }
 
 .talkyard-comments {
