--- a/themes/pagedjs/assets/css/page/about.css
+++ b/themes/pagedjs/assets/css/page/about.css
@@ -1,9 +1,9 @@
 .about {
-    --tint: calc(360 - 120); 
+    /* --tint: calc(360 - 120); 
     --light: 20%;
     --saturation: 50%;
     --color-primary: hsl(var(--tint), var(--light), var(--saturation));
-    --color-accent: var(--color-primary);
+    --color-accent: var(--color-primary); */
     
     .meta {
         display: none;
