--- a/themes/pagedjs/assets/css/page/doc.css
+++ b/themes/pagedjs/assets/css/page/doc.css
@@ -1,9 +1,9 @@
 .documentation {
-  --tint: calc(360 - 200);
+  /* --tint: calc(360 - 200);
   --light: 20%;
   --saturation: 50%;
   --color-primary: hsl(var(--tint), var(--light), var(--saturation));
-  --color-accent: var(--color-primary);
+  --color-accent: var(--color-primary); */
   counter-reset: doc;
 }
 
