--- a/themes/pagedjs/assets/css/page/posts.css
+++ b/themes/pagedjs/assets/css/page/posts.css
@@ -1,8 +1,8 @@
 .posts {
-  --tint: calc(360/40);
+  /* --tint: calc(360/40);
   --light: 20%;
   --saturation: 50%;
   --color-primary: hsl(var(--tint), var(--light), var(--saturation));
-  --color-accent: var(--color-primary);
+  --color-accent: var(--color-primary); */
 }
 
